# interface-specification-propagator

./: .gitignore  README.md  dune-project  frama-c-isp.opam  isp_return_structs-2.c  isp_return_structs-3.c  isp_return_structs.c  ptests_config
.github/workflows/: build.yml
general/: isp_eva_over_aproximation.c  isp_floating_limitations.c  isp_test_001.c  isp_test_002.c  isp_test_004.c  isp_test_007.c  isp_test_008.c  isp_test_010.c  isp_test_012.c  isp_test_014.c  isp_test_018.c  isp_test_019.c  isp_test_020.c  isp_test_023.c  isp_test_024.c  isp_test_025.c  isp_test_026.c  isp_test_027.c  isp_test_029.c  isp_test_030.c  isp_test_031.c
general/oracle/: dune  isp_eva_over_aproximation.res.oracle  isp_floating_limitations.res.oracle  isp_test_001.0.res.oracle  isp_test_001.1.res.oracle  isp_test_002.res.oracle  isp_test_003.res.oracle  isp_test_004.res.oracle  isp_test_005.res.oracle  isp_test_006.res.oracle  isp_test_007.res.oracle  isp_test_008.res.oracle  isp_test_009.res.oracle  isp_test_010.res.oracle  isp_test_011.res.oracle  isp_test_012.res.oracle  isp_test_013.res.oracle  isp_test_014.res.oracle  isp_test_015.res.oracle  isp_test_016.res.oracle  isp_test_017.res.oracle  isp_test_018.res.oracle  isp_test_019.res.oracle  isp_test_020.res.oracle  isp_test_021.res.oracle  isp_test_022.res.oracle  isp_test_023.res.oracle  isp_test_024.res.oracle  isp_test_025.res.oracle  isp_test_026.res.oracle  isp_test_027.res.oracle  isp_test_028.res.oracle  isp_test_029.res.oracle  isp_test_030.res.oracle  isp_test_031.res.oracle  isp_test_032.res.oracle  isp_test_033_pointers.res.oracle  isp_test_034_pointer.res.oracle
general/result/: dune  isp_eva_over_aproximation.0.exec.wtests  isp_floating_limitations.0.exec.wtests  isp_test_001.0.exec.wtests  isp_test_001.1.exec.wtests  isp_test_002.0.exec.wtests  isp_test_003.0.exec.wtests  isp_test_004.0.exec.wtests  isp_test_005.0.exec.wtests  isp_test_006.0.exec.wtests  isp_test_007.0.exec.wtests  isp_test_008.0.exec.wtests  isp_test_009.0.exec.wtests  isp_test_010.0.exec.wtests  isp_test_011.0.exec.wtests  isp_test_012.0.exec.wtests  isp_test_013.0.exec.wtests  isp_test_014.0.exec.wtests  isp_test_015.0.exec.wtests  isp_test_016.0.exec.wtests  isp_test_017.0.exec.wtests  isp_test_018.0.exec.wtests  isp_test_019.0.exec.wtests  isp_test_020.0.exec.wtests  isp_test_021.0.exec.wtests  isp_test_022.0.exec.wtests  isp_test_023.0.exec.wtests  isp_test_024.0.exec.wtests  isp_test_025.0.exec.wtests  isp_test_026.0.exec.wtests  isp_test_027.0.exec.wtests  isp_test_028.0.exec.wtests  isp_test_029.0.exec.wtests  isp_test_030.0.exec.wtests  isp_test_031.0.exec.wtests  isp_test_032.0.exec.wtests  isp_test_033_pointers.0.exec.wtests  isp_test_034_pointer.0.exec.wtests
src/: Isp.mli  Makefile  dune  isp.ml  isp_emitters.ml  isp_emitters.mli  isp_local_states.ml  isp_main.ml  isp_options.ml  isp_utils.ml  isp_utils.mli  isp_visitor.ml
tests/general/: ghissue_006.c  isp_000_eva_over_aproximation.c  isp_001_entry_point.c  isp_003_helper.c  isp_005_mutated_globals.c  isp_006_mut_glob_nested_fn.c  isp_009_array.c  isp_011_float_interval.c  isp_013_float_single.c  isp_015_if.c  isp_016_if_nested.c  isp_017_cast.c  isp_021_struct.c  isp_022_pointers.c  isp_027_array_data_structures.c  isp_028_thesis_example.c  isp_032_array_index_processing.c  isp_033_nested_pointers_crashes.c  isp_034_manipulated_pointer_crashes.c  isp_035_init_struct.c  isp_036_return_local_struct.c  isp_037_return_global_struct.c  isp_038_struct_as_arg.c
tests/general/oracle/: dune  isp_000_eva_over_aproximation.res.oracle  isp_001_entry_point.res.oracle  isp_002_unreachable.res.oracle  isp_003_helper.res.oracle  isp_004_accessed_globals.res.oracle  isp_005_mutated_globals.res.oracle  isp_006_mut_glob_nested_fn.res.oracle  isp_007_interface_spec.res.oracle  isp_008_interface_spec.res.oracle  isp_009_array.res.oracle  isp_010_enum_typedef.res.oracle  isp_011_float_interval.res.oracle  isp_012_float_interval.res.oracle  isp_013_float_single.res.oracle  isp_014_if.res.oracle  isp_015_if.res.oracle  isp_016_if_nested.res.oracle  isp_017_cast.res.oracle  isp_018_single_lval_eval.res.oracle  isp_019_set_lval_eval.res.oracle  isp_020_interval_lval_eval.res.oracle  isp_021_struct.res.oracle  isp_022_pointers.res.oracle  isp_023_fn_args_pbv_failing.res.oracle  isp_024_fn_args_pbv_unused.res.oracle  isp_025_fn_args_pbv_if_failing.res.oracle  isp_026_return_global.res.oracle  isp_027_array_data_structures.res.oracle  isp_028_thesis_example.res.oracle  isp_029_read_array.res.oracle  isp_030_switch.res.oracle  isp_032_array_index_processing.res.oracle  isp_033_nested_pointers_crashes.res.oracle  isp_034_manipulated_pointer_crashes.res.oracle  isp_035_init_struct.res.oracle  isp_036_return_local_struct.res.oracle  isp_037_return_global_struct.res.oracle  isp_038_struct_as_arg.res.oracle  isp_eva_over_aproximation.res.oracle
