(rule (target "isp_test_005.err.oracle") (mode fallback) (action (write-file "isp_test_005.err.oracle" "")))
(rule (target "isp_test_005.res.oracle") (mode fallback) (action (write-file "isp_test_005.res.oracle" "")))
(rule (target "isp_test_018.err.oracle") (mode fallback) (action (write-file "isp_test_018.err.oracle" "")))
(rule (target "isp_test_018.res.oracle") (mode fallback) (action (write-file "isp_test_018.res.oracle" "")))
(rule (target "isp_test_023.err.oracle") (mode fallback) (action (write-file "isp_test_023.err.oracle" "")))
(rule (target "isp_test_023.res.oracle") (mode fallback) (action (write-file "isp_test_023.res.oracle" "")))
(rule (target "isp_test_001.0.err.oracle") (mode fallback) (action (write-file "isp_test_001.0.err.oracle" "")))
(rule (target "isp_test_001.0.res.oracle") (mode fallback) (action (write-file "isp_test_001.0.res.oracle" "")))
(rule (target "isp_test_001.1.err.oracle") (mode fallback) (action (write-file "isp_test_001.1.err.oracle" "")))
(rule (target "isp_test_001.1.res.oracle") (mode fallback) (action (write-file "isp_test_001.1.res.oracle" "")))
(rule (target "isp_test_006.err.oracle") (mode fallback) (action (write-file "isp_test_006.err.oracle" "")))
(rule (target "isp_test_006.res.oracle") (mode fallback) (action (write-file "isp_test_006.res.oracle" "")))
(rule (target "isp_test_019.err.oracle") (mode fallback) (action (write-file "isp_test_019.err.oracle" "")))
(rule (target "isp_test_019.res.oracle") (mode fallback) (action (write-file "isp_test_019.res.oracle" "")))
(rule (target "isp_test_016.err.oracle") (mode fallback) (action (write-file "isp_test_016.err.oracle" "")))
(rule (target "isp_test_016.res.oracle") (mode fallback) (action (write-file "isp_test_016.res.oracle" "")))
(rule (target "isp_test_004.err.oracle") (mode fallback) (action (write-file "isp_test_004.err.oracle" "")))
(rule (target "isp_test_004.res.oracle") (mode fallback) (action (write-file "isp_test_004.res.oracle" "")))
(rule (target "isp_test_025.err.oracle") (mode fallback) (action (write-file "isp_test_025.err.oracle" "")))
(rule (target "isp_test_025.res.oracle") (mode fallback) (action (write-file "isp_test_025.res.oracle" "")))
(rule (target "isp_test_003.err.oracle") (mode fallback) (action (write-file "isp_test_003.err.oracle" "")))
(rule (target "isp_test_003.res.oracle") (mode fallback) (action (write-file "isp_test_003.res.oracle" "")))
(rule (target "isp_test_032.err.oracle") (mode fallback) (action (write-file "isp_test_032.err.oracle" "")))
(rule (target "isp_test_032.res.oracle") (mode fallback) (action (write-file "isp_test_032.res.oracle" "")))
(rule (target "isp_test_009.err.oracle") (mode fallback) (action (write-file "isp_test_009.err.oracle" "")))
(rule (target "isp_test_009.res.oracle") (mode fallback) (action (write-file "isp_test_009.res.oracle" "")))
(rule (target "isp_test_013.err.oracle") (mode fallback) (action (write-file "isp_test_013.err.oracle" "")))
(rule (target "isp_test_013.res.oracle") (mode fallback) (action (write-file "isp_test_013.res.oracle" "")))
(rule (target "isp_test_017.err.oracle") (mode fallback) (action (write-file "isp_test_017.err.oracle" "")))
(rule (target "isp_test_017.res.oracle") (mode fallback) (action (write-file "isp_test_017.res.oracle" "")))
(rule (target "isp_test_030.err.oracle") (mode fallback) (action (write-file "isp_test_030.err.oracle" "")))
(rule (target "isp_test_030.res.oracle") (mode fallback) (action (write-file "isp_test_030.res.oracle" "")))
(rule (target "isp_test_024.err.oracle") (mode fallback) (action (write-file "isp_test_024.err.oracle" "")))
(rule (target "isp_test_024.res.oracle") (mode fallback) (action (write-file "isp_test_024.res.oracle" "")))
(rule (target "isp_test_007.err.oracle") (mode fallback) (action (write-file "isp_test_007.err.oracle" "")))
(rule (target "isp_test_007.res.oracle") (mode fallback) (action (write-file "isp_test_007.res.oracle" "")))
(rule (target "isp_test_027.err.oracle") (mode fallback) (action (write-file "isp_test_027.err.oracle" "")))
(rule (target "isp_test_027.res.oracle") (mode fallback) (action (write-file "isp_test_027.res.oracle" "")))
(rule (target "isp_test_022.err.oracle") (mode fallback) (action (write-file "isp_test_022.err.oracle" "")))
(rule (target "isp_test_022.res.oracle") (mode fallback) (action (write-file "isp_test_022.res.oracle" "")))
(rule (target "isp_test_020.err.oracle") (mode fallback) (action (write-file "isp_test_020.err.oracle" "")))
(rule (target "isp_test_020.res.oracle") (mode fallback) (action (write-file "isp_test_020.res.oracle" "")))
(rule (target "isp_test_012.err.oracle") (mode fallback) (action (write-file "isp_test_012.err.oracle" "")))
(rule (target "isp_test_012.res.oracle") (mode fallback) (action (write-file "isp_test_012.res.oracle" "")))
(rule (target "isp_floating_limitations.err.oracle") (mode fallback) (action (write-file "isp_floating_limitations.err.oracle" "")))
(rule (target "isp_floating_limitations.res.oracle") (mode fallback) (action (write-file "isp_floating_limitations.res.oracle" "")))
(rule (target "isp_test_014.err.oracle") (mode fallback) (action (write-file "isp_test_014.err.oracle" "")))
(rule (target "isp_test_014.res.oracle") (mode fallback) (action (write-file "isp_test_014.res.oracle" "")))
(rule (target "isp_test_034_pointer.err.oracle") (mode fallback) (action (write-file "isp_test_034_pointer.err.oracle" "")))
(rule (target "isp_test_034_pointer.res.oracle") (mode fallback) (action (write-file "isp_test_034_pointer.res.oracle" "")))
(rule (target "isp_test_026.err.oracle") (mode fallback) (action (write-file "isp_test_026.err.oracle" "")))
(rule (target "isp_test_026.res.oracle") (mode fallback) (action (write-file "isp_test_026.res.oracle" "")))
(rule (target "isp_test_033_pointers.err.oracle") (mode fallback) (action (write-file "isp_test_033_pointers.err.oracle" "")))
(rule (target "isp_test_033_pointers.res.oracle") (mode fallback) (action (write-file "isp_test_033_pointers.res.oracle" "")))
(rule (target "isp_test_011.err.oracle") (mode fallback) (action (write-file "isp_test_011.err.oracle" "")))
(rule (target "isp_test_011.res.oracle") (mode fallback) (action (write-file "isp_test_011.res.oracle" "")))
(rule (target "isp_test_021.err.oracle") (mode fallback) (action (write-file "isp_test_021.err.oracle" "")))
(rule (target "isp_test_021.res.oracle") (mode fallback) (action (write-file "isp_test_021.res.oracle" "")))
(rule (target "isp_test_031.err.oracle") (mode fallback) (action (write-file "isp_test_031.err.oracle" "")))
(rule (target "isp_test_031.res.oracle") (mode fallback) (action (write-file "isp_test_031.res.oracle" "")))
(rule (target "isp_test_002.err.oracle") (mode fallback) (action (write-file "isp_test_002.err.oracle" "")))
(rule (target "isp_test_002.res.oracle") (mode fallback) (action (write-file "isp_test_002.res.oracle" "")))
(rule (target "isp_test_008.err.oracle") (mode fallback) (action (write-file "isp_test_008.err.oracle" "")))
(rule (target "isp_test_008.res.oracle") (mode fallback) (action (write-file "isp_test_008.res.oracle" "")))
(rule (target "isp_test_015.err.oracle") (mode fallback) (action (write-file "isp_test_015.err.oracle" "")))
(rule (target "isp_test_015.res.oracle") (mode fallback) (action (write-file "isp_test_015.res.oracle" "")))
(rule (target "isp_test_028.err.oracle") (mode fallback) (action (write-file "isp_test_028.err.oracle" "")))
(rule (target "isp_test_028.res.oracle") (mode fallback) (action (write-file "isp_test_028.res.oracle" "")))
(rule (target "isp_eva_over_aproximation.err.oracle") (mode fallback) (action (write-file "isp_eva_over_aproximation.err.oracle" "")))
(rule (target "isp_eva_over_aproximation.res.oracle") (mode fallback) (action (write-file "isp_eva_over_aproximation.res.oracle" "")))
(rule (target "isp_test_010.err.oracle") (mode fallback) (action (write-file "isp_test_010.err.oracle" "")))
(rule (target "isp_test_010.res.oracle") (mode fallback) (action (write-file "isp_test_010.res.oracle" "")))
(rule (target "isp_test_029.err.oracle") (mode fallback) (action (write-file "isp_test_029.err.oracle" "")))
(rule (target "isp_test_029.res.oracle") (mode fallback) (action (write-file "isp_test_029.res.oracle" "")))

