(rule (target "isp_016_if_nested.err.oracle") (mode fallback) (action (write-file "isp_016_if_nested.err.oracle" "")))
(rule (target "isp_016_if_nested.res.oracle") (mode fallback) (action (write-file "isp_016_if_nested.res.oracle" "")))
(rule (target "isp_012_float_interval.err.oracle") (mode fallback) (action (write-file "isp_012_float_interval.err.oracle" "")))
(rule (target "isp_012_float_interval.res.oracle") (mode fallback) (action (write-file "isp_012_float_interval.res.oracle" "")))
(rule (target "isp_021_struct.err.oracle") (mode fallback) (action (write-file "isp_021_struct.err.oracle" "")))
(rule (target "isp_021_struct.res.oracle") (mode fallback) (action (write-file "isp_021_struct.res.oracle" "")))
(rule (target "isp_003_helper.err.oracle") (mode fallback) (action (write-file "isp_003_helper.err.oracle" "")))
(rule (target "isp_003_helper.res.oracle") (mode fallback) (action (write-file "isp_003_helper.res.oracle" "")))
(rule (target "isp_034_manipulated_pointer_crashes.err.oracle") (mode fallback) (action (write-file "isp_034_manipulated_pointer_crashes.err.oracle" "")))
(rule (target "isp_034_manipulated_pointer_crashes.res.oracle") (mode fallback) (action (write-file "isp_034_manipulated_pointer_crashes.res.oracle" "")))
(rule (target "isp_007_interface_spec.err.oracle") (mode fallback) (action (write-file "isp_007_interface_spec.err.oracle" "")))
(rule (target "isp_007_interface_spec.res.oracle") (mode fallback) (action (write-file "isp_007_interface_spec.res.oracle" "")))
(rule (target "isp_020_interval_lval_eval.err.oracle") (mode fallback) (action (write-file "isp_020_interval_lval_eval.err.oracle" "")))
(rule (target "isp_020_interval_lval_eval.res.oracle") (mode fallback) (action (write-file "isp_020_interval_lval_eval.res.oracle" "")))
(rule (target "isp_026_return_global.err.oracle") (mode fallback) (action (write-file "isp_026_return_global.err.oracle" "")))
(rule (target "isp_026_return_global.res.oracle") (mode fallback) (action (write-file "isp_026_return_global.res.oracle" "")))
(rule (target "isp_010_enum_typedef.err.oracle") (mode fallback) (action (write-file "isp_010_enum_typedef.err.oracle" "")))
(rule (target "isp_010_enum_typedef.res.oracle") (mode fallback) (action (write-file "isp_010_enum_typedef.res.oracle" "")))
(rule (target "isp_004_accessed_globals.err.oracle") (mode fallback) (action (write-file "isp_004_accessed_globals.err.oracle" "")))
(rule (target "isp_004_accessed_globals.res.oracle") (mode fallback) (action (write-file "isp_004_accessed_globals.res.oracle" "")))
(rule (target "isp_019_set_lval_eval.err.oracle") (mode fallback) (action (write-file "isp_019_set_lval_eval.err.oracle" "")))
(rule (target "isp_019_set_lval_eval.res.oracle") (mode fallback) (action (write-file "isp_019_set_lval_eval.res.oracle" "")))
(rule (target "isp_013_float_single.err.oracle") (mode fallback) (action (write-file "isp_013_float_single.err.oracle" "")))
(rule (target "isp_013_float_single.res.oracle") (mode fallback) (action (write-file "isp_013_float_single.res.oracle" "")))
(rule (target "isp_017_cast.err.oracle") (mode fallback) (action (write-file "isp_017_cast.err.oracle" "")))
(rule (target "isp_017_cast.res.oracle") (mode fallback) (action (write-file "isp_017_cast.res.oracle" "")))
(rule (target "isp_029_read_array.err.oracle") (mode fallback) (action (write-file "isp_029_read_array.err.oracle" "")))
(rule (target "isp_029_read_array.res.oracle") (mode fallback) (action (write-file "isp_029_read_array.res.oracle" "")))
(rule (target "isp_032_array_index_processing.err.oracle") (mode fallback) (action (write-file "isp_032_array_index_processing.err.oracle" "")))
(rule (target "isp_032_array_index_processing.res.oracle") (mode fallback) (action (write-file "isp_032_array_index_processing.res.oracle" "")))
(rule (target "isp_025_fn_args_pbv_if_failing.err.oracle") (mode fallback) (action (write-file "isp_025_fn_args_pbv_if_failing.err.oracle" "")))
(rule (target "isp_025_fn_args_pbv_if_failing.res.oracle") (mode fallback) (action (write-file "isp_025_fn_args_pbv_if_failing.res.oracle" "")))
(rule (target "isp_023_fn_args_pbv_failing.err.oracle") (mode fallback) (action (write-file "isp_023_fn_args_pbv_failing.err.oracle" "")))
(rule (target "isp_023_fn_args_pbv_failing.res.oracle") (mode fallback) (action (write-file "isp_023_fn_args_pbv_failing.res.oracle" "")))
(rule (target "isp_028_thesis_example.err.oracle") (mode fallback) (action (write-file "isp_028_thesis_example.err.oracle" "")))
(rule (target "isp_028_thesis_example.res.oracle") (mode fallback) (action (write-file "isp_028_thesis_example.res.oracle" "")))
(rule (target "isp_030_switch.err.oracle") (mode fallback) (action (write-file "isp_030_switch.err.oracle" "")))
(rule (target "isp_030_switch.res.oracle") (mode fallback) (action (write-file "isp_030_switch.res.oracle" "")))
(rule (target "isp_009_array.err.oracle") (mode fallback) (action (write-file "isp_009_array.err.oracle" "")))
(rule (target "isp_009_array.res.oracle") (mode fallback) (action (write-file "isp_009_array.res.oracle" "")))
(rule (target "isp_001_entry_point.err.oracle") (mode fallback) (action (write-file "isp_001_entry_point.err.oracle" "")))
(rule (target "isp_001_entry_point.res.oracle") (mode fallback) (action (write-file "isp_001_entry_point.res.oracle" "")))
(rule (target "isp_005_mutated_globals.err.oracle") (mode fallback) (action (write-file "isp_005_mutated_globals.err.oracle" "")))
(rule (target "isp_005_mutated_globals.res.oracle") (mode fallback) (action (write-file "isp_005_mutated_globals.res.oracle" "")))
(rule (target "isp_027_array_data_structures.err.oracle") (mode fallback) (action (write-file "isp_027_array_data_structures.err.oracle" "")))
(rule (target "isp_027_array_data_structures.res.oracle") (mode fallback) (action (write-file "isp_027_array_data_structures.res.oracle" "")))
(rule (target "isp_011_float_interval.err.oracle") (mode fallback) (action (write-file "isp_011_float_interval.err.oracle" "")))
(rule (target "isp_011_float_interval.res.oracle") (mode fallback) (action (write-file "isp_011_float_interval.res.oracle" "")))
(rule (target "isp_033_nested_pointers_crashes.err.oracle") (mode fallback) (action (write-file "isp_033_nested_pointers_crashes.err.oracle" "")))
(rule (target "isp_033_nested_pointers_crashes.res.oracle") (mode fallback) (action (write-file "isp_033_nested_pointers_crashes.res.oracle" "")))
(rule (target "isp_015_if.err.oracle") (mode fallback) (action (write-file "isp_015_if.err.oracle" "")))
(rule (target "isp_015_if.res.oracle") (mode fallback) (action (write-file "isp_015_if.res.oracle" "")))
(rule (target "isp_022_pointers.err.oracle") (mode fallback) (action (write-file "isp_022_pointers.err.oracle" "")))
(rule (target "isp_022_pointers.res.oracle") (mode fallback) (action (write-file "isp_022_pointers.res.oracle" "")))
(rule (target "isp_000_eva_over_aproximation.err.oracle") (mode fallback) (action (write-file "isp_000_eva_over_aproximation.err.oracle" "")))
(rule (target "isp_000_eva_over_aproximation.res.oracle") (mode fallback) (action (write-file "isp_000_eva_over_aproximation.res.oracle" "")))
(rule (target "isp_008_interface_spec.err.oracle") (mode fallback) (action (write-file "isp_008_interface_spec.err.oracle" "")))
(rule (target "isp_008_interface_spec.res.oracle") (mode fallback) (action (write-file "isp_008_interface_spec.res.oracle" "")))
(rule (target "isp_002_unreachable.err.oracle") (mode fallback) (action (write-file "isp_002_unreachable.err.oracle" "")))
(rule (target "isp_002_unreachable.res.oracle") (mode fallback) (action (write-file "isp_002_unreachable.res.oracle" "")))
(rule (target "isp_024_fn_args_pbv_unused.err.oracle") (mode fallback) (action (write-file "isp_024_fn_args_pbv_unused.err.oracle" "")))
(rule (target "isp_024_fn_args_pbv_unused.res.oracle") (mode fallback) (action (write-file "isp_024_fn_args_pbv_unused.res.oracle" "")))
(rule (target "isp_018_single_lval_eval.err.oracle") (mode fallback) (action (write-file "isp_018_single_lval_eval.err.oracle" "")))
(rule (target "isp_018_single_lval_eval.res.oracle") (mode fallback) (action (write-file "isp_018_single_lval_eval.res.oracle" "")))
(rule (target "isp_006_mut_glob_nested_fn.err.oracle") (mode fallback) (action (write-file "isp_006_mut_glob_nested_fn.err.oracle" "")))
(rule (target "isp_006_mut_glob_nested_fn.res.oracle") (mode fallback) (action (write-file "isp_006_mut_glob_nested_fn.res.oracle" "")))
(rule (target "isp_014_if.err.oracle") (mode fallback) (action (write-file "isp_014_if.err.oracle" "")))
(rule (target "isp_014_if.res.oracle") (mode fallback) (action (write-file "isp_014_if.res.oracle" "")))
(rule (target "ghissue_006.err.oracle") (mode fallback) (action (write-file "ghissue_006.err.oracle" "")))
(rule (target "ghissue_006.res.oracle") (mode fallback) (action (write-file "ghissue_006.res.oracle" "")))

